@@ -1,3 +1,6 @@
+2024-10-29 Konstantin Kushnir <chpock@gmail.com>
+	* Update cookfs, enable crypto functions
+
 2024-10-12 Konstantin Kushnir <chpock@gmail.com>
 	* Bumped version to 2.3.0
 
